New endpoint-- admin update existing location added, schema modified to be more lenient with location input.
